--- a/LocationTracking/LocationTracking/Base.lproj/Main.storyboard
+++ b/LocationTracking/LocationTracking/Base.lproj/Main.storyboard
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13196" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="cfO-c7-M0M">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="cfO-c7-M0M">
     <device id="retina4_0" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13173"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -140,8 +140,8 @@
                             <constraint firstItem="3Ox-bQ-bik" firstAttribute="top" secondItem="WQQ-Kd-HIK" secondAttribute="bottom" constant="-5" id="2jW-7J-YLU"/>
                             <constraint firstItem="WQQ-Kd-HIK" firstAttribute="top" secondItem="6aP-0D-MvR" secondAttribute="bottom" constant="20" id="4D7-ga-DLk"/>
                             <constraint firstItem="Znq-JG-l15" firstAttribute="top" secondItem="vy7-6h-lhH" secondAttribute="bottom" constant="5" id="D5L-GF-Q3w"/>
-                            <constraint firstItem="fat-sJ-GFk" firstAttribute="top" secondItem="rSL-S1-vD7" secondAttribute="bottom" id="Em5-5y-dKz"/>
                             <constraint firstItem="3Ox-bQ-bik" firstAttribute="width" secondItem="WQQ-Kd-HIK" secondAttribute="width" id="F4Q-su-qWr"/>
+                            <constraint firstAttribute="bottom" secondItem="rSL-S1-vD7" secondAttribute="bottom" id="I1G-2v-OYT"/>
                             <constraint firstItem="6aP-0D-MvR" firstAttribute="leading" secondItem="AIx-Ra-xZK" secondAttribute="leading" id="TXr-H0-Flh"/>
                             <constraint firstItem="WQQ-Kd-HIK" firstAttribute="centerX" secondItem="ahs-FQ-cd2" secondAttribute="centerX" id="WRh-Cj-pGU"/>
                             <constraint firstItem="3Ox-bQ-bik" firstAttribute="centerX" secondItem="ahs-FQ-cd2" secondAttribute="centerX" id="XPT-63-5nE"/>
@@ -274,7 +274,6 @@
                         <constraints>
                             <constraint firstItem="xe3-Zk-Fxt" firstAttribute="leading" secondItem="6YF-KF-GxT" secondAttribute="leading" constant="20" id="6iO-qv-EBm"/>
                             <constraint firstItem="tV4-uA-XEV" firstAttribute="trailing" secondItem="Rbw-kg-nbU" secondAttribute="trailing" id="7j7-9m-lb8"/>
-                            <constraint firstItem="mRB-3c-vaS" firstAttribute="top" secondItem="JJ9-IA-7v1" secondAttribute="bottom" id="9VJ-bu-Ffj"/>
                             <constraint firstItem="xX1-yL-vmD" firstAttribute="leading" secondItem="xe3-Zk-Fxt" secondAttribute="leading" id="BWh-qg-NWC"/>
                             <constraint firstAttribute="trailing" secondItem="JJ9-IA-7v1" secondAttribute="trailing" id="C7G-eT-H6B"/>
                             <constraint firstItem="Hm8-si-SgI" firstAttribute="top" secondItem="Rbw-kg-nbU" secondAttribute="bottom" constant="10" id="EW8-ws-dcX"/>
@@ -293,6 +292,7 @@
                             <constraint firstItem="Rbw-kg-nbU" firstAttribute="trailing" secondItem="xe3-Zk-Fxt" secondAttribute="trailing" id="nLo-RW-55Q"/>
                             <constraint firstItem="Rbw-kg-nbU" firstAttribute="top" secondItem="xX1-yL-vmD" secondAttribute="bottom" constant="10" id="nu2-Am-TMO"/>
                             <constraint firstItem="JJ9-IA-7v1" firstAttribute="top" secondItem="6YF-KF-GxT" secondAttribute="top" id="uc9-7p-aKq"/>
+                            <constraint firstAttribute="bottom" secondItem="JJ9-IA-7v1" secondAttribute="bottom" id="xgI-Wl-mio"/>
                         </constraints>
                     </view>
                     <connections>
@@ -759,6 +759,7 @@
                             <constraint firstItem="vd8-I9-GBD" firstAttribute="centerY" secondItem="nzP-Td-KhG" secondAttribute="centerY" id="36p-5L-LAq"/>
                             <constraint firstItem="nzP-Td-KhG" firstAttribute="top" secondItem="mPf-sh-far" secondAttribute="bottom" constant="10" id="4Lk-48-UwA"/>
                             <constraint firstItem="tdY-Rw-Qzd" firstAttribute="leading" secondItem="mPf-sh-far" secondAttribute="trailing" constant="5" id="9sr-3J-jbV"/>
+                            <constraint firstAttribute="bottom" secondItem="dZn-b6-NT2" secondAttribute="bottom" id="9z5-d2-bpK"/>
                             <constraint firstItem="cJr-x2-GNG" firstAttribute="top" secondItem="KXn-dJ-6TD" secondAttribute="bottom" constant="10" id="AH6-A2-Lmh"/>
                             <constraint firstAttribute="trailing" secondItem="dZn-b6-NT2" secondAttribute="trailing" id="ChL-K0-mRp"/>
                             <constraint firstItem="vd8-I9-GBD" firstAttribute="leading" secondItem="tdY-Rw-Qzd" secondAttribute="leading" id="Ew0-Fu-Q7F"/>
@@ -787,7 +788,6 @@
                             <constraint firstItem="nzP-Td-KhG" firstAttribute="leading" secondItem="mPf-sh-far" secondAttribute="leading" id="quP-a2-EFy"/>
                             <constraint firstItem="mPf-sh-far" firstAttribute="leading" secondItem="TgM-5L-4HZ" secondAttribute="leading" id="ryN-zi-KiT"/>
                             <constraint firstItem="tdY-Rw-Qzd" firstAttribute="centerY" secondItem="mPf-sh-far" secondAttribute="centerY" id="sLn-lU-1OX"/>
-                            <constraint firstItem="ati-ze-FEJ" firstAttribute="top" secondItem="dZn-b6-NT2" secondAttribute="bottom" id="ucM-DU-Th2"/>
                             <constraint firstAttribute="trailing" secondItem="cJr-x2-GNG" secondAttribute="trailing" constant="20" id="wGK-K2-iQH"/>
                             <constraint firstAttribute="trailing" secondItem="tdY-Rw-Qzd" secondAttribute="trailing" constant="20" id="wp2-V8-LKk"/>
                             <constraint firstItem="dZn-b6-NT2" firstAttribute="leading" secondItem="IJI-WL-4fQ" secondAttribute="leading" id="xCo-xX-g2l"/>
@@ -1150,6 +1150,7 @@
                         </subviews>
                         <constraints>
                             <constraint firstItem="W9Q-Ev-QUF" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="90c-38-bNl"/>
+                            <constraint firstAttribute="bottom" secondItem="7J1-bL-8zx" secondAttribute="bottom" id="AWG-ic-kRG"/>
                             <constraint firstItem="jeo-fS-Ex7" firstAttribute="width" secondItem="Ewk-ug-haI" secondAttribute="width" id="CE0-Yj-cky"/>
                             <constraint firstItem="7J1-bL-8zx" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="Gwo-5h-Aha"/>
                             <constraint firstItem="I2Y-ue-wS3" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="Hf1-aW-MKP"/>
@@ -1162,7 +1163,6 @@
                             <constraint firstItem="W9Q-Ev-QUF" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="h9w-JY-8BU"/>
                             <constraint firstItem="jeo-fS-Ex7" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" constant="10" id="kGp-15-ETC"/>
                             <constraint firstItem="W9Q-Ev-QUF" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="nbU-wQ-KQn"/>
-                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="7J1-bL-8zx" secondAttribute="bottom" id="oTO-LX-its"/>
                             <constraint firstItem="7J1-bL-8zx" firstAttribute="top" secondItem="jeo-fS-Ex7" secondAttribute="bottom" constant="40" id="rRE-QY-qUK"/>
                             <constraint firstItem="IGi-cb-GhH" firstAttribute="leading" secondItem="EN0-G1-lHx" secondAttribute="leading" id="u7D-dH-NeL"/>
                             <constraint firstAttribute="trailing" secondItem="I2Y-ue-wS3" secondAttribute="trailing" id="uF8-BK-5Tx"/>
